@@ -7,6 +7,7 @@ PHP                                                                        NEWS
   . headers_list(). (Sara)
   . php_strip_whitespace(). strip whitespace & comments from a script. (Ilia)
   . php_check_syntax(). check php script for parse errors. (Ilia)
+  . image_type_to_extension(). return extension based on image type. (Ilia)
 - Fixed __autoload() to preserve case of the passed class name. (Andi)
 - Fixed bug #26072 (--disable-libxml does not work). (Jani)
 - Fixed bug #26083 (Non-working write support in ext/dom). (Ilia)
